[package]
name = "pneumatic_data"
version = "0.1.0"
edition = "2021"

[dependencies]
pneumatic_core = { git = "https://github.com/garrettkolson/pneumatic_core.git" }
once_cell = "1.19.0"
rocksdb = "0.23.0"
serde = { version = "1.0.219", features = ["derive"] }
moka = { version = "0.12.10", features = ["sync"] }
